Remove Map.of usages